# Sentinal-AI

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: build.yml  lint.yml  test.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  datasets.py  evaluations.py  health.py  projects.py  reports.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/config/: settings.py
backend/app/core/: exceptions.py  logging.py  response.py
backend/app/db/: session.py
backend/app/langgraph/: graph.py  nodes.py  state.py
backend/app/middleware/: error_handler.py
backend/app/models/: __init__.py  audit_log.py  dataset.py  evaluation.py  project.py  report.py  user.py
backend/app/repositories/: base.py  dataset.py  evaluation.py  project.py  report.py  user.py
backend/app/schemas/: auth.py  dataset.py  evaluation.py  project.py  report.py
backend/app/services/: auth.py  dataset.py  evaluation.py  project.py  report.py
backend/app/storage/: base.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/tests/: test_health.py
docker/: backend.Containerfile  frontend.Containerfile
docs/: API.md  Architecture.md  CONTRIBUTING.md  Development.md  FolderStructure.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src/: main.tsx
frontend/src/__tests__/: app.test.tsx
frontend/src/hooks/: use-auth.ts  use-datasets.ts  use-evaluations.ts  use-projects.ts  use-reports.ts
(+32 files in other folders)
